--- a/main.html
+++ b/main.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- the entire body must be written by student -->
-    <table style="width: 100%">
-    <caption>
-      Monthly savings
-    </caption>
+  <table id="grocery-table" style="width: 100%">
+    <caption>Monthly Savings</caption>
     <tr>
       <th>Item</th>
       <th>Prices in Rs</th>
@@ -37,9 +33,8 @@
       <td class="price">50</td>
     </tr>
   </table>
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
