--- a/main.html
+++ b/main.html
@@ -14,25 +14,31 @@
     </tr>
     <tr>
       <td class="item">Tea</td>
-      <td class="price">50</td>
+      <td class="price" contenteditable="true">50</td>
     </tr>
     <tr>
       <td class="item">Coffee</td>
-      <td class="price">70</td>
+      <td class="price" contenteditable="true">70</td>
     </tr>
     <tr>
       <td class="item">Biscuits</td>
-      <td class="price">100</td>
+      <td class="price" contenteditable="true">100</td>
     </tr>
     <tr>
       <td class="item">Rice</td>
-      <td class="price">130</td>
+      <td class="price" contenteditable="true">130</td>
     </tr>
     <tr>
       <td class="item">Milk</td>
-      <td class="price">50</td>
+      <td class="price" contenteditable="true">50</td>
     </tr>
   </table>
+
+  <!-- Button to trigger total calculation -->
+  <button id="calculate-btn">Get Total Price</button>
+
+  <!-- Div to show the total price -->
+  <div id="ans"></div>
 
   <script type="text/javascript" src="script.js"></script>
 </body>
